Fixed the img overflow issue and added initial code for Project

--- a/src/CSS/HeroSection.css
+++ b/src/CSS/HeroSection.css
@@ -1,4 +1,5 @@
 .hero-section{
+    position: relative;
     padding-top: 180px !important;
     min-height: 100vh;
     /* background-image: url(/public/background.jpg); */
@@ -9,10 +10,7 @@
 .hero-section::before{
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
     background: rgba(132, 132, 134, 0.6);
 }
 
